udpate eval results

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -39,26 +39,260 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c66650fe",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af9c106",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Latest Results\n",
-    "|  |  | Relevance |  |  |  |  |  | Readability |  |  |  | Factuality |  |\n",
-    "|:----:|:-----:|:---------:|:---------:|:---------:|:---------:|:---------:|:---------:|:-----------:|:-----------:|:-----------:|:-----------:|:----------:|:----------:|\n",
-    "|**Date**|**Where**| ROUGE1 | ROUGE2 | ROUGEL | BLEU | METEOR | BERTScore | FKGL | DCRS | CLI | LENS | AlignScore | SummaC |\n",
-    "| Best  |          | 48.72 | 15.69 | 45.50 | x | x | 86.77 | 10.46 | 6.76  | 11.04 | 81.21 | 93.08 | 90.28 |\n",
-    "| Worst |          | 25.64 | 4.03  | 23.18 | x | x | 80.63 | 36.29 | 12.45 | 18.98 | 1.32  | 42.41 | 44.61 |\n",
-    "| 4/25  | Codabench|       |       |       |   |   |       |       |       |       |       |       |       |\n",
-    "| 4/25  | Local    | 11.26| 1.91| 10.80|   |   | 80.06|15.4339|8.3134 | 4.9358|       |       |       |\n",
-    "|  | |  |  |  ||  |     |||     |||  |\n",
-    "|  | |  |  |  ||  |     |||     |||  |\n",
+    "import pandas as pd\n",
     "\n",
+    "def display_custom_table(file_path, caption=None):\n",
+    "    \"\"\"\n",
+    "    Load a table from a CSV file and display it with:\n",
+    "    - Pink header (#f888b9)\n",
+    "    - Alternating light/mid blue rows\n",
+    "    - Black text\n",
+    "    - Bold top two rows and first column\n",
+    "    - Border around the table\n",
+    "    \"\"\"\n",
     "\n",
+    "    # Load the CSV\n",
+    "    df = pd.read_csv(file_path)\n",
     "\n",
-    "*Note: Higher scores are better for all metrics except readability measures (FKGL, DCRS, CLI) where lower scores indicate better readability.*\n",
+    "    # Save original \"pretty\" headers\n",
+    "    pretty_columns = [col if not col.startswith(\"Unnamed\") else \"\" for col in df.columns]\n",
     "\n",
-    "*The Best and Worst rows are the highest and lowest scores from 2024.*"
+    "    # Fix for Styler: make internal columns unique\n",
+    "    safe_columns = []\n",
+    "    seen = {}\n",
+    "    for col in pretty_columns:\n",
+    "        key = col if col != \"\" else \"<empty>\"\n",
+    "        if key not in seen:\n",
+    "            seen[key] = 1\n",
+    "            safe_columns.append(key)\n",
+    "        else:\n",
+    "            seen[key] += 1\n",
+    "            safe_columns.append(f\"{key}_{seen[key]}\")\n",
+    "    df.columns = safe_columns\n",
+    "\n",
+    "    # Replace NaN with empty strings\n",
+    "    df = df.fillna(\"\")\n",
+    "\n",
+    "    # Create the Styler\n",
+    "    styler = df.style.hide(axis=\"index\")\n",
+    "\n",
+    "    if caption:\n",
+    "        styler = styler.set_caption(caption)\n",
+    "\n",
+    "    # Set table outline, header color (YOUR pink), black text\n",
+    "    styler = styler.set_table_styles([\n",
+    "        {'selector': 'table', 'props': [('border', '2px solid black'), ('border-collapse', 'collapse')]},\n",
+    "        {'selector': 'thead th', 'props': [('background-color', '#f888b9'), ('color', 'black'), ('font-weight', 'bold'), ('border', '1px solid black')]},\n",
+    "        {'selector': 'tbody td', 'props': [('border', '1px solid black'), ('color', 'black')]},\n",
+    "    ])\n",
+    "\n",
+    "    # Default all cells to light blue + black text\n",
+    "    styler = styler.set_properties(**{\n",
+    "        'background-color': '#add8e6',\n",
+    "        'color': 'black'\n",
+    "    })\n",
+    "\n",
+    "    # Apply alternating row colors\n",
+    "    def highlight_rows(row):\n",
+    "        color = '#87ceeb' if row.name % 2 else '#add8e6'\n",
+    "        return [f'background-color: {color}; color: black;' for _ in row]\n",
+    "\n",
+    "    styler = styler.apply(highlight_rows, axis=1)\n",
+    "\n",
+    "    # --- Bold the top two rows ---\n",
+    "    def bold_top_two_rows(row):\n",
+    "        if row.name in [0, 1]:  # First two rows\n",
+    "            return ['font-weight: bold;' for _ in row]\n",
+    "        else:\n",
+    "            return ['' for _ in row]\n",
+    "\n",
+    "    styler = styler.apply(bold_top_two_rows, axis=1)\n",
+    "\n",
+    "    # --- Bold the first column ---\n",
+    "    def bold_first_column(val):\n",
+    "        return 'font-weight: bold;'\n",
+    "\n",
+    "    first_column_name = df.columns[0]\n",
+    "    styler = styler.applymap(bold_first_column, subset=[first_column_name])\n",
+    "\n",
+    "    # Set display headers back to pretty\n",
+    "    styler.columns = pretty_columns\n",
+    "\n",
+    "    display(styler)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d7d72780",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_9ec7f table {\n",
+       "  border: 2px solid black;\n",
+       "  border-collapse: collapse;\n",
+       "}\n",
+       "#T_9ec7f thead th {\n",
+       "  background-color: #f888b9;\n",
+       "  color: black;\n",
+       "  border: 1px solid black;\n",
+       "}\n",
+       "#T_9ec7f tbody td {\n",
+       "  border: 1px solid black;\n",
+       "  color: black;\n",
+       "}\n",
+       "#T_9ec7f_row0_col0, #T_9ec7f_row0_col1, #T_9ec7f_row0_col2, #T_9ec7f_row0_col3, #T_9ec7f_row0_col4, #T_9ec7f_row0_col5, #T_9ec7f_row0_col6, #T_9ec7f_row0_col7, #T_9ec7f_row0_col8, #T_9ec7f_row0_col9, #T_9ec7f_row0_col10, #T_9ec7f_row0_col11, #T_9ec7f_row0_col12, #T_9ec7f_row0_col13, #T_9ec7f_row2_col0, #T_9ec7f_row2_col1, #T_9ec7f_row2_col2, #T_9ec7f_row2_col3, #T_9ec7f_row2_col4, #T_9ec7f_row2_col5, #T_9ec7f_row2_col6, #T_9ec7f_row2_col7, #T_9ec7f_row2_col8, #T_9ec7f_row2_col9, #T_9ec7f_row2_col10, #T_9ec7f_row2_col11, #T_9ec7f_row2_col12, #T_9ec7f_row2_col13, #T_9ec7f_row4_col0, #T_9ec7f_row4_col1, #T_9ec7f_row4_col2, #T_9ec7f_row4_col3, #T_9ec7f_row4_col4, #T_9ec7f_row4_col5, #T_9ec7f_row4_col6, #T_9ec7f_row4_col7, #T_9ec7f_row4_col8, #T_9ec7f_row4_col9, #T_9ec7f_row4_col10, #T_9ec7f_row4_col11, #T_9ec7f_row4_col12, #T_9ec7f_row4_col13 {\n",
+       "  background-color: #add8e6;\n",
+       "  color: black;\n",
+       "  background-color: #add8e6;\n",
+       "  color: black;\n",
+       "}\n",
+       "#T_9ec7f_row1_col0, #T_9ec7f_row1_col1, #T_9ec7f_row1_col2, #T_9ec7f_row1_col3, #T_9ec7f_row1_col4, #T_9ec7f_row1_col5, #T_9ec7f_row1_col6, #T_9ec7f_row1_col7, #T_9ec7f_row1_col8, #T_9ec7f_row1_col9, #T_9ec7f_row1_col10, #T_9ec7f_row1_col11, #T_9ec7f_row1_col12, #T_9ec7f_row1_col13, #T_9ec7f_row3_col0, #T_9ec7f_row3_col1, #T_9ec7f_row3_col2, #T_9ec7f_row3_col3, #T_9ec7f_row3_col4, #T_9ec7f_row3_col5, #T_9ec7f_row3_col6, #T_9ec7f_row3_col7, #T_9ec7f_row3_col8, #T_9ec7f_row3_col9, #T_9ec7f_row3_col10, #T_9ec7f_row3_col11, #T_9ec7f_row3_col12, #T_9ec7f_row3_col13, #T_9ec7f_row5_col0, #T_9ec7f_row5_col1, #T_9ec7f_row5_col2, #T_9ec7f_row5_col3, #T_9ec7f_row5_col4, #T_9ec7f_row5_col5, #T_9ec7f_row5_col6, #T_9ec7f_row5_col7, #T_9ec7f_row5_col8, #T_9ec7f_row5_col9, #T_9ec7f_row5_col10, #T_9ec7f_row5_col11, #T_9ec7f_row5_col12, #T_9ec7f_row5_col13 {\n",
+       "  background-color: #add8e6;\n",
+       "  color: black;\n",
+       "  background-color: #87ceeb;\n",
+       "  color: black;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_9ec7f\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9ec7f_level0_col0\" class=\"col_heading level0 col0\" ><empty></th>\n",
+       "      <th id=\"T_9ec7f_level0_col1\" class=\"col_heading level0 col1\" ><empty>_2</th>\n",
+       "      <th id=\"T_9ec7f_level0_col2\" class=\"col_heading level0 col2\" >Relevance</th>\n",
+       "      <th id=\"T_9ec7f_level0_col3\" class=\"col_heading level0 col3\" ><empty>_3</th>\n",
+       "      <th id=\"T_9ec7f_level0_col4\" class=\"col_heading level0 col4\" ><empty>_4</th>\n",
+       "      <th id=\"T_9ec7f_level0_col5\" class=\"col_heading level0 col5\" ><empty>_5</th>\n",
+       "      <th id=\"T_9ec7f_level0_col6\" class=\"col_heading level0 col6\" ><empty>_6</th>\n",
+       "      <th id=\"T_9ec7f_level0_col7\" class=\"col_heading level0 col7\" ><empty>_7</th>\n",
+       "      <th id=\"T_9ec7f_level0_col8\" class=\"col_heading level0 col8\" >Readability</th>\n",
+       "      <th id=\"T_9ec7f_level0_col9\" class=\"col_heading level0 col9\" ><empty>_8</th>\n",
+       "      <th id=\"T_9ec7f_level0_col10\" class=\"col_heading level0 col10\" ><empty>_9</th>\n",
+       "      <th id=\"T_9ec7f_level0_col11\" class=\"col_heading level0 col11\" ><empty>_10</th>\n",
+       "      <th id=\"T_9ec7f_level0_col12\" class=\"col_heading level0 col12\" >Factuality</th>\n",
+       "      <th id=\"T_9ec7f_level0_col13\" class=\"col_heading level0 col13\" ><empty>_11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row0_col0\" class=\"data row0 col0\" >Date</td>\n",
+       "      <td id=\"T_9ec7f_row0_col1\" class=\"data row0 col1\" >Where</td>\n",
+       "      <td id=\"T_9ec7f_row0_col2\" class=\"data row0 col2\" >ROUGE1</td>\n",
+       "      <td id=\"T_9ec7f_row0_col3\" class=\"data row0 col3\" >ROUGE2</td>\n",
+       "      <td id=\"T_9ec7f_row0_col4\" class=\"data row0 col4\" >ROUGEL</td>\n",
+       "      <td id=\"T_9ec7f_row0_col5\" class=\"data row0 col5\" >BLEU</td>\n",
+       "      <td id=\"T_9ec7f_row0_col6\" class=\"data row0 col6\" >METEOR</td>\n",
+       "      <td id=\"T_9ec7f_row0_col7\" class=\"data row0 col7\" >BERTScore</td>\n",
+       "      <td id=\"T_9ec7f_row0_col8\" class=\"data row0 col8\" >FKGL</td>\n",
+       "      <td id=\"T_9ec7f_row0_col9\" class=\"data row0 col9\" >DCRS</td>\n",
+       "      <td id=\"T_9ec7f_row0_col10\" class=\"data row0 col10\" >CLI</td>\n",
+       "      <td id=\"T_9ec7f_row0_col11\" class=\"data row0 col11\" >LENS</td>\n",
+       "      <td id=\"T_9ec7f_row0_col12\" class=\"data row0 col12\" >AlignScore</td>\n",
+       "      <td id=\"T_9ec7f_row0_col13\" class=\"data row0 col13\" >SummaC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row1_col0\" class=\"data row1 col0\" >Best</td>\n",
+       "      <td id=\"T_9ec7f_row1_col1\" class=\"data row1 col1\" ></td>\n",
+       "      <td id=\"T_9ec7f_row1_col2\" class=\"data row1 col2\" >48.72</td>\n",
+       "      <td id=\"T_9ec7f_row1_col3\" class=\"data row1 col3\" >15.69</td>\n",
+       "      <td id=\"T_9ec7f_row1_col4\" class=\"data row1 col4\" >45.5</td>\n",
+       "      <td id=\"T_9ec7f_row1_col5\" class=\"data row1 col5\" >x</td>\n",
+       "      <td id=\"T_9ec7f_row1_col6\" class=\"data row1 col6\" >x</td>\n",
+       "      <td id=\"T_9ec7f_row1_col7\" class=\"data row1 col7\" >86.77</td>\n",
+       "      <td id=\"T_9ec7f_row1_col8\" class=\"data row1 col8\" >10.46</td>\n",
+       "      <td id=\"T_9ec7f_row1_col9\" class=\"data row1 col9\" >6.76</td>\n",
+       "      <td id=\"T_9ec7f_row1_col10\" class=\"data row1 col10\" >11.04</td>\n",
+       "      <td id=\"T_9ec7f_row1_col11\" class=\"data row1 col11\" >81.21</td>\n",
+       "      <td id=\"T_9ec7f_row1_col12\" class=\"data row1 col12\" >93.08</td>\n",
+       "      <td id=\"T_9ec7f_row1_col13\" class=\"data row1 col13\" >90.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row2_col0\" class=\"data row2 col0\" >Worst</td>\n",
+       "      <td id=\"T_9ec7f_row2_col1\" class=\"data row2 col1\" ></td>\n",
+       "      <td id=\"T_9ec7f_row2_col2\" class=\"data row2 col2\" >25.64</td>\n",
+       "      <td id=\"T_9ec7f_row2_col3\" class=\"data row2 col3\" >4.03</td>\n",
+       "      <td id=\"T_9ec7f_row2_col4\" class=\"data row2 col4\" >23.18</td>\n",
+       "      <td id=\"T_9ec7f_row2_col5\" class=\"data row2 col5\" >x</td>\n",
+       "      <td id=\"T_9ec7f_row2_col6\" class=\"data row2 col6\" >x</td>\n",
+       "      <td id=\"T_9ec7f_row2_col7\" class=\"data row2 col7\" >80.63</td>\n",
+       "      <td id=\"T_9ec7f_row2_col8\" class=\"data row2 col8\" >36.29</td>\n",
+       "      <td id=\"T_9ec7f_row2_col9\" class=\"data row2 col9\" >12.45</td>\n",
+       "      <td id=\"T_9ec7f_row2_col10\" class=\"data row2 col10\" >18.98</td>\n",
+       "      <td id=\"T_9ec7f_row2_col11\" class=\"data row2 col11\" >1.32</td>\n",
+       "      <td id=\"T_9ec7f_row2_col12\" class=\"data row2 col12\" >42.41</td>\n",
+       "      <td id=\"T_9ec7f_row2_col13\" class=\"data row2 col13\" >44.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row3_col0\" class=\"data row3 col0\" >25-Apr</td>\n",
+       "      <td id=\"T_9ec7f_row3_col1\" class=\"data row3 col1\" >Codabench</td>\n",
+       "      <td id=\"T_9ec7f_row3_col2\" class=\"data row3 col2\" >failed</td>\n",
+       "      <td id=\"T_9ec7f_row3_col3\" class=\"data row3 col3\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col4\" class=\"data row3 col4\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col5\" class=\"data row3 col5\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col6\" class=\"data row3 col6\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col7\" class=\"data row3 col7\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col8\" class=\"data row3 col8\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col9\" class=\"data row3 col9\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col10\" class=\"data row3 col10\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col11\" class=\"data row3 col11\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col12\" class=\"data row3 col12\" ></td>\n",
+       "      <td id=\"T_9ec7f_row3_col13\" class=\"data row3 col13\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row4_col0\" class=\"data row4 col0\" >25-Apr</td>\n",
+       "      <td id=\"T_9ec7f_row4_col1\" class=\"data row4 col1\" >local</td>\n",
+       "      <td id=\"T_9ec7f_row4_col2\" class=\"data row4 col2\" >11.26</td>\n",
+       "      <td id=\"T_9ec7f_row4_col3\" class=\"data row4 col3\" >1.91</td>\n",
+       "      <td id=\"T_9ec7f_row4_col4\" class=\"data row4 col4\" >10.8</td>\n",
+       "      <td id=\"T_9ec7f_row4_col5\" class=\"data row4 col5\" ></td>\n",
+       "      <td id=\"T_9ec7f_row4_col6\" class=\"data row4 col6\" ></td>\n",
+       "      <td id=\"T_9ec7f_row4_col7\" class=\"data row4 col7\" >80.06</td>\n",
+       "      <td id=\"T_9ec7f_row4_col8\" class=\"data row4 col8\" >15.4339</td>\n",
+       "      <td id=\"T_9ec7f_row4_col9\" class=\"data row4 col9\" >8.3134</td>\n",
+       "      <td id=\"T_9ec7f_row4_col10\" class=\"data row4 col10\" >4.9358</td>\n",
+       "      <td id=\"T_9ec7f_row4_col11\" class=\"data row4 col11\" ></td>\n",
+       "      <td id=\"T_9ec7f_row4_col12\" class=\"data row4 col12\" ></td>\n",
+       "      <td id=\"T_9ec7f_row4_col13\" class=\"data row4 col13\" ></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9ec7f_row5_col0\" class=\"data row5 col0\" >27-Apr</td>\n",
+       "      <td id=\"T_9ec7f_row5_col1\" class=\"data row5 col1\" >Codabench</td>\n",
+       "      <td id=\"T_9ec7f_row5_col2\" class=\"data row5 col2\" >pending</td>\n",
+       "      <td id=\"T_9ec7f_row5_col3\" class=\"data row5 col3\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col4\" class=\"data row5 col4\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col5\" class=\"data row5 col5\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col6\" class=\"data row5 col6\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col7\" class=\"data row5 col7\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col8\" class=\"data row5 col8\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col9\" class=\"data row5 col9\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col10\" class=\"data row5 col10\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col11\" class=\"data row5 col11\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col12\" class=\"data row5 col12\" ></td>\n",
+       "      <td id=\"T_9ec7f_row5_col13\" class=\"data row5 col13\" ></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f702c3bbbd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "display_custom_table('results.csv')"
    ]
   },
   {
