prototyping layterm injectioon

--- a/project.ipynb
+++ b/project.ipynb
@@ -2056,8 +2056,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "id": "ae5e0e63-c774-4bd5-a196-fd8f4e15be60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "og_summ_list = df_elife_train_clean.summary.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "cda1138e-b5ad-41be-a6d6-57c1bb60ccef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_summ = og_summ_list[28]\n",
+    "#genomes, DNA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "0cbd2a0a-cca6-44a8-a00a-86d81dbb51f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DNA'"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmatizer = WordNetLemmatizer()\n",
+    "lemmatizer.lemmatize('DNA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "id": "093a7e03-a3eb-4b62-9349-bf66d81db5b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term_dict = {\"genome\" : [(\"complete set of genetic instructions\", \"NN\"), (\"complete sets of genetic instructions\", \"NNS\")]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "id": "65ee8904-27e1-43cb-aea3-79d7684de03e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Our genomes contain around 20 , 000 different genes that code for instructions to create proteins and other important molecules . When changes , or mutations , occur within these genes , malfunctioning proteins that are damaging to the cell may be produced . Researchers of human genetics have tried to spot the genetic mutations that are associated with illnesses , for example heart diseases . However , they found that most of these mutations are actually located outside of genes , in the ‘non-coding’ areas that make up the majority of our genome . These mutations do not modify proteins directly , which makes it challenging to understand how they may be related to heart conditions . One possibility is that the genetic changes affect regions called enhancers , which control where , when and how much a gene is turned on by physically interacting with it . Mutations in enhancers could lead to a gene producing too much or too little of a protein , which might create problems in the cell . Yet , it is difficult to match an enhancer with the gene or genes it controls . One reason is that a non-coding region can influence a gene placed far away on the DNA strand . Indeed , the long DNA molecule precisely folds in on itself to fit inside its compartment in the cell , which can bring together distant sequences . Montefiori et al . take over 500 non-coding areas , which can carry mutations associated with heart diseases , and use a technique called Hi-C to try to identify which genes these regions may control . The tool can model the 3D organization of the genome , and it was further modified to capture only the regions of the genome that contain genes , and the DNA sequences that interact with them , in human heart cells . This helped to create a 3D map of 347 genes which come in contact with the non-coding areas that carry mutations associated with heart diseases . In fact , deleting those genes often causes heart disorders in mice . In addition , Montefiori et al . reveal that 90% of the non-coding regions examined were influencing genes that were far away . This shows that , despite a common assumption , enhancers often do not regulate the coding sequences they are nearest to on the DNA strand . Pinpointing the genes regulated by the non-coding regions involved in cardiovascular diseases could lead to new ways of treating or preventing these conditions . The 3D map created by Montefiori et al . may also help to visualize how the genetic information is organized in heart cells . This will contribute to the current effort to understand the role of the 3D structure of the genome , especially in different cell types .'"
+      ]
+     },
+     "execution_count": 329,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_summ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "8b653265-ad16-4766-aab8-0397a9952bc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inject(doc):\n",
+    "    \"\"\"A function to inject layterms\"\"\"\n",
+    "    lemma_doc = []\n",
+    "    raw_doc =[]\n",
+    "    doc_sents = nltk.sent_tokenize(doc)\n",
+    "    regex_token = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
+    "    for sent in doc_sents:\n",
+    "        #print(type(sent))\n",
+    "        doc = regex_token.tokenize(sent)\n",
+    "        doc = [word.lower() for word in doc]\n",
+    "        doc = pos_tag(doc)\n",
+    "        lemmatizer = WordNetLemmatizer() \n",
+    "        doc2 = [(lemmatizer.lemmatize(word[0]), word[1]) for word in doc]\n",
+    "        lemma_doc.append(doc2)\n",
+    "        raw_doc.append(doc)\n",
+    "    print(len(raw_doc))\n",
+    "    #print(\"GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG\")\n",
+    "    print(len(lemma_doc))\n",
+    "    #doc = [(word[0], get_wordnet_pos(word[1])) for word in doc]\n",
+    "    #lemmatizer = WordNetLemmatizer() \n",
+    "    #doc = [lemmatizer.lemmatize(word[0], word[1]) for word in doc]\n",
+    "    return raw_doc, lemma_doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "id": "eb0894ac-cf53-4c7c-8a0d-3f77632358ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw, lemma = inject(test_summ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "id": "9abfd3d2-4ddb-4a1d-9850-8bf2478bfe98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentence index:  0 word index:  1 ('complete sets of genetic instructions', 'NNS')\n",
+      "sentence index:  3 word index:  26 ('complete set of genetic instructions', 'NN')\n",
+      "sentence index:  12 word index:  9 ('complete set of genetic instructions', 'NN')\n",
+      "sentence index:  12 word index:  22 ('complete set of genetic instructions', 'NN')\n",
+      "sentence index:  21 word index:  17 ('complete set of genetic instructions', 'NN')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(lemma)): #for every sentence\n",
+    "    for j in range(0, len(lemma[i])): # for every word in every sentence\n",
+    "        #print(lemma[i][j])\n",
+    "        if lemma[i][j][0] in term_dict: #if word in term_dict\n",
+    "            #print(lemma[i][j][0])\n",
+    "            dict_list = term_dict[lemma[i][j][0]] #get the list of values\n",
+    "            for k in dict_list: #loop through list\n",
+    "                #print(k[1])\n",
+    "                #print(\"GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG\")\n",
+    "                if lemma[i][j][1] == k[1]:\n",
+    "                    print(\"sentence index: \", i, \"word index: \", j, k)\n",
+    "                    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "id": "0141f91d-309f-4f27-8f3e-7718fe060a63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find(lemma):\n",
+    "    collect = []\n",
+    "    for i in range(0, len(lemma)): #for every sentence\n",
+    "        for j in range(0, len(lemma[i])): # for every word in every sentence\n",
+    "            #print(lemma[i][j])\n",
+    "            if lemma[i][j][0] in term_dict: #if word in term_dict\n",
+    "                #print(lemma[i][j][0])\n",
+    "                dict_list = term_dict[lemma[i][j][0]] #get the list of values\n",
+    "                for k in dict_list: #loop through list\n",
+    "                    #print(k[1])\n",
+    "                    #print(\"GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG\")\n",
+    "                    if lemma[i][j][1] == k[1]:\n",
+    "                        collect.append((i, j, k[0], k[1]))\n",
+    "    return collect\n",
+    "                        #print(\"sentence index: \", i, \"word index: \", j, k[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "id": "30563910-7a07-47d7-af2f-eadbdc4b7516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rep_list = find(lemma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "id": "8ed02acc-5e43-4deb-84d4-468ec0ea56a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace(rep_list, raw):\n",
+    "    for loc in rep_list:\n",
+    "        sent_ind = loc[0]\n",
+    "        word_ind = loc[1]\n",
+    "        layt = loc[2]\n",
+    "        layt_tag = loc[3]\n",
+    "        raw[sent_ind][word_ind] = (layt, layt_tag)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "id": "4dc975a4-9ee6-451c-9cc8-5b8f02f6d9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check = replace(rep_list, raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "id": "78caa903-a706-4395-ae68-33a6d3f5b7d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[('our', 'PRP$'), ('complete sets of genetic instructions', 'NNS'), ('contain', 'VBP'), ('around', 'IN'), ('different', 'JJ'), ('genes', 'NNS'), ('that', 'WDT'), ('code', 'VBP'), ('for', 'IN'), ('instructions', 'NNS'), ('to', 'TO'), ('create', 'VB'), ('proteins', 'NNS'), ('and', 'CC'), ('other', 'JJ'), ('important', 'JJ'), ('molecules', 'NNS')], [('when', 'WRB'), ('changes', 'NNS'), ('or', 'CC'), ('mutations', 'NNS'), ('occur', 'VBP'), ('within', 'IN'), ('these', 'DT'), ('genes', 'NNS'), ('malfunctioning', 'VBG'), ('proteins', 'NNS'), ('that', 'WDT'), ('are', 'VBP'), ('damaging', 'VBG'), ('to', 'TO'), ('the', 'DT'), ('cell', 'NN'), ('may', 'MD'), ('be', 'VB'), ('produced', 'VBN')], [('researchers', 'NNS'), ('of', 'IN'), ('human', 'JJ'), ('genetics', 'NNS'), ('have', 'VBP'), ('tried', 'VBN'), ('to', 'TO'), ('spot', 'VB'), ('the', 'DT'), ('genetic', 'JJ'), ('mutations', 'NNS'), ('that', 'WDT'), ('are', 'VBP'), ('associated', 'VBN'), ('with', 'IN'), ('illnesses', 'NNS'), ('for', 'IN'), ('example', 'NN'), ('heart', 'NN'), ('diseases', 'NNS')], [('however', 'RB'), ('they', 'PRP'), ('found', 'VBP'), ('that', 'IN'), ('most', 'JJS'), ('of', 'IN'), ('these', 'DT'), ('mutations', 'NNS'), ('are', 'VBP'), ('actually', 'RB'), ('located', 'VBN'), ('outside', 'IN'), ('of', 'IN'), ('genes', 'NNS'), ('in', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('areas', 'NNS'), ('that', 'WDT'), ('make', 'VBP'), ('up', 'RP'), ('the', 'DT'), ('majority', 'NN'), ('of', 'IN'), ('our', 'PRP$'), ('complete set of genetic instructions', 'NN')], [('these', 'DT'), ('mutations', 'NNS'), ('do', 'VBP'), ('not', 'RB'), ('modify', 'VB'), ('proteins', 'NNS'), ('directly', 'RB'), ('which', 'WDT'), ('makes', 'VBZ'), ('it', 'PRP'), ('challenging', 'VBG'), ('to', 'TO'), ('understand', 'VB'), ('how', 'WRB'), ('they', 'PRP'), ('may', 'MD'), ('be', 'VB'), ('related', 'VBN'), ('to', 'TO'), ('heart', 'NN'), ('conditions', 'NNS')], [('one', 'CD'), ('possibility', 'NN'), ('is', 'VBZ'), ('that', 'IN'), ('the', 'DT'), ('genetic', 'JJ'), ('changes', 'NNS'), ('affect', 'VBP'), ('regions', 'NNS'), ('called', 'VBD'), ('enhancers', 'NNS'), ('which', 'WDT'), ('control', 'VBP'), ('where', 'WRB'), ('when', 'WRB'), ('and', 'CC'), ('how', 'WRB'), ('much', 'RB'), ('a', 'DT'), ('gene', 'NN'), ('is', 'VBZ'), ('turned', 'VBN'), ('on', 'IN'), ('by', 'IN'), ('physically', 'RB'), ('interacting', 'VBG'), ('with', 'IN'), ('it', 'PRP')], [('mutations', 'NNS'), ('in', 'IN'), ('enhancers', 'NNS'), ('could', 'MD'), ('lead', 'VB'), ('to', 'TO'), ('a', 'DT'), ('gene', 'NN'), ('producing', 'VBG'), ('too', 'RB'), ('much', 'JJ'), ('or', 'CC'), ('too', 'RB'), ('little', 'JJ'), ('of', 'IN'), ('a', 'DT'), ('protein', 'NN'), ('which', 'WDT'), ('might', 'MD'), ('create', 'VB'), ('problems', 'NNS'), ('in', 'IN'), ('the', 'DT'), ('cell', 'NN')], [('yet', 'RB'), ('it', 'PRP'), ('is', 'VBZ'), ('difficult', 'JJ'), ('to', 'TO'), ('match', 'VB'), ('an', 'DT'), ('enhancer', 'NN'), ('with', 'IN'), ('the', 'DT'), ('gene', 'NN'), ('or', 'CC'), ('genes', 'NNS'), ('it', 'PRP'), ('controls', 'VBZ')], [('one', 'CD'), ('reason', 'NN'), ('is', 'VBZ'), ('that', 'IN'), ('a', 'DT'), ('non', 'JJ'), ('coding', 'VBG'), ('region', 'NN'), ('can', 'MD'), ('influence', 'VB'), ('a', 'DT'), ('gene', 'NN'), ('placed', 'VBD'), ('far', 'RB'), ('away', 'RB'), ('on', 'IN'), ('the', 'DT'), ('dna', 'NN'), ('strand', 'NN')], [('indeed', 'RB'), ('the', 'DT'), ('long', 'JJ'), ('dna', 'NN'), ('molecule', 'NN'), ('precisely', 'RB'), ('folds', 'VBZ'), ('in', 'IN'), ('on', 'IN'), ('itself', 'PRP'), ('to', 'TO'), ('fit', 'VB'), ('inside', 'IN'), ('its', 'PRP$'), ('compartment', 'NN'), ('in', 'IN'), ('the', 'DT'), ('cell', 'NN'), ('which', 'WDT'), ('can', 'MD'), ('bring', 'VB'), ('together', 'RB'), ('distant', 'JJ'), ('sequences', 'NNS')], [('montefiori', 'NNS'), ('et', 'VBP'), ('al', 'NN')], [('take', 'VB'), ('over', 'RP'), ('non', 'JJ'), ('coding', 'VBG'), ('areas', 'NNS'), ('which', 'WDT'), ('can', 'MD'), ('carry', 'VB'), ('mutations', 'NNS'), ('associated', 'VBN'), ('with', 'IN'), ('heart', 'NN'), ('diseases', 'NNS'), ('and', 'CC'), ('use', 'VB'), ('a', 'DT'), ('technique', 'NN'), ('called', 'VBN'), ('hi', 'NN'), ('c', 'NN'), ('to', 'TO'), ('try', 'VB'), ('to', 'TO'), ('identify', 'VB'), ('which', 'WDT'), ('genes', 'NNS'), ('these', 'DT'), ('regions', 'NNS'), ('may', 'MD'), ('control', 'VB')], [('the', 'DT'), ('tool', 'NN'), ('can', 'MD'), ('model', 'VB'), ('the', 'DT'), ('d', 'JJ'), ('organization', 'NN'), ('of', 'IN'), ('the', 'DT'), ('complete set of genetic instructions', 'NN'), ('and', 'CC'), ('it', 'PRP'), ('was', 'VBD'), ('further', 'RBR'), ('modified', 'VBN'), ('to', 'TO'), ('capture', 'VB'), ('only', 'RB'), ('the', 'DT'), ('regions', 'NNS'), ('of', 'IN'), ('the', 'DT'), ('complete set of genetic instructions', 'NN'), ('that', 'WDT'), ('contain', 'VBP'), ('genes', 'NNS'), ('and', 'CC'), ('the', 'DT'), ('dna', 'NN'), ('sequences', 'VBZ'), ('that', 'IN'), ('interact', 'NN'), ('with', 'IN'), ('them', 'PRP'), ('in', 'IN'), ('human', 'JJ'), ('heart', 'NN'), ('cells', 'NNS')], [('this', 'DT'), ('helped', 'VBD'), ('to', 'TO'), ('create', 'VB'), ('a', 'DT'), ('d', 'JJ'), ('map', 'NN'), ('of', 'IN'), ('genes', 'NNS'), ('which', 'WDT'), ('come', 'VBP'), ('in', 'IN'), ('contact', 'NN'), ('with', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('areas', 'NNS'), ('that', 'WDT'), ('carry', 'VBP'), ('mutations', 'NNS'), ('associated', 'VBN'), ('with', 'IN'), ('heart', 'NN'), ('diseases', 'NNS')], [('in', 'IN'), ('fact', 'NN'), ('deleting', 'VBG'), ('those', 'DT'), ('genes', 'NNS'), ('often', 'RB'), ('causes', 'VBZ'), ('heart', 'NN'), ('disorders', 'NNS'), ('in', 'IN'), ('mice', 'NN')], [('in', 'IN'), ('addition', 'NN'), ('montefiori', 'FW'), ('et', 'FW'), ('al', 'NN')], [('reveal', 'NN'), ('that', 'IN'), ('of', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('regions', 'NNS'), ('examined', 'VBN'), ('were', 'VBD'), ('influencing', 'VBG'), ('genes', 'NNS'), ('that', 'WDT'), ('were', 'VBD'), ('far', 'RB'), ('away', 'RB')], [('this', 'DT'), ('shows', 'VBZ'), ('that', 'IN'), ('despite', 'IN'), ('a', 'DT'), ('common', 'JJ'), ('assumption', 'NN'), ('enhancers', 'NNS'), ('often', 'RB'), ('do', 'VBP'), ('not', 'RB'), ('regulate', 'VB'), ('the', 'DT'), ('coding', 'NN'), ('sequences', 'NNS'), ('they', 'PRP'), ('are', 'VBP'), ('nearest', 'JJS'), ('to', 'TO'), ('on', 'IN'), ('the', 'DT'), ('dna', 'NN'), ('strand', 'NN')], [('pinpointing', 'VBG'), ('the', 'DT'), ('genes', 'NNS'), ('regulated', 'VBN'), ('by', 'IN'), ('the', 'DT'), ('non', 'NN'), ('coding', 'VBG'), ('regions', 'NNS'), ('involved', 'VBN'), ('in', 'IN'), ('cardiovascular', 'JJ'), ('diseases', 'NNS'), ('could', 'MD'), ('lead', 'VB'), ('to', 'TO'), ('new', 'JJ'), ('ways', 'NNS'), ('of', 'IN'), ('treating', 'VBG'), ('or', 'CC'), ('preventing', 'VBG'), ('these', 'DT'), ('conditions', 'NNS')], [('the', 'DT'), ('d', 'NN'), ('map', 'NN'), ('created', 'VBN'), ('by', 'IN'), ('montefiori', 'JJ'), ('et', 'NNS'), ('al', 'VBP')], [('may', 'MD'), ('also', 'RB'), ('help', 'VB'), ('to', 'TO'), ('visualize', 'VB'), ('how', 'WRB'), ('the', 'DT'), ('genetic', 'JJ'), ('information', 'NN'), ('is', 'VBZ'), ('organized', 'VBN'), ('in', 'IN'), ('heart', 'NN'), ('cells', 'NNS')], [('this', 'DT'), ('will', 'MD'), ('contribute', 'VB'), ('to', 'TO'), ('the', 'DT'), ('current', 'JJ'), ('effort', 'NN'), ('to', 'TO'), ('understand', 'VB'), ('the', 'DT'), ('role', 'NN'), ('of', 'IN'), ('the', 'DT'), ('d', 'NN'), ('structure', 'NN'), ('of', 'IN'), ('the', 'DT'), ('complete set of genetic instructions', 'NN'), ('especially', 'RB'), ('in', 'IN'), ('different', 'JJ'), ('cell', 'NN'), ('types', 'NNS')]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e024bba4-19e7-4b51-84b9-85c3f292f714",
    "metadata": {},
    "outputs": [],
    "source": []
