Created general main loop in layterm_injection.pynb

--- a/layterm_injection.ipynb
+++ b/layterm_injection.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "db14ba63-634b-48f8-a083-8af8a1e9b424",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dda7abaf-fed5-4509-b31c-46655eaf2d71",
    "metadata": {},
    "outputs": [],
@@ -522,10 +522,10 @@
     "        doc2 = [(lemmatizer.lemmatize(word[0]), word[1]) for word in doc]\n",
     "        lemma_doc.append(doc2)\n",
     "        raw_doc.append(doc)\n",
-    "    print(len(raw_doc))\n",
-    "    print(len(lemma_doc))\n",
-    "    print(raw_doc)\n",
-    "    print(lemma_doc)\n",
+    "    #print(len(raw_doc))\n",
+    "    #print(len(lemma_doc))\n",
+    "    #print(raw_doc)\n",
+    "    #print(lemma_doc)\n",
     "    #doc = [(word[0], get_wordnet_pos(word[1])) for word in doc]\n",
     "    #lemmatizer = WordNetLemmatizer() \n",
     "    #doc = [lemmatizer.lemmatize(word[0], word[1]) for word in doc]\n",
@@ -686,6 +686,26 @@
    "metadata": {},
    "source": [
     "So the goal of this code is to do a big find and replace. We create two parallel documents, one thats the \"raw\" document that contains teh article split by sentence then word, where each word is tagged with its POS. The 'lemma\" doc is split the same but instead of using words we use lemmas. This allows us to do a two part check to make sure we're inputing the right word in the right location, by matching on both the lemma and POS. This allows for more accurate tagging and avoids issues with homographs. Currently this code is designed to run on one single article. It needs to be optimized to run on some kind of data structure full of articles and maybe wrapped into a single function. the out put of that function needs to be a real readable summary, currently it spits out the separated tokenized pos tagged version. This needs to be stripped and joined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "692f1d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAIN LOOP\n",
+    "data = df_elife_train # THis is the dataframe\n",
+    "layterm_summaries = [] # Collect layterm summaries \n",
+    "for summ in og_summ_list: # For every summary in the data (currently elife_train, can be changed above)\n",
+    "    raw, lemma = create_injections(summ) # Make raw and lemma versions of the summary\n",
+    "    rep_list = find(lemma) # Find replacements\n",
+    "    new_summ = replace(rep_list, raw) # Create new summary with the replacements\n",
+    "    layterm_summaries.append(new_summ) # Add the new summary to the list\n",
+    "\n",
+    "# Save the summaries as a new column in thedataframe\n",
+    "data['tfidf_summary'] = layterm_summaries "
    ]
   }
  ],
